# Project-Relexwise

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  constants.py  main.py  pyproject.toml  rag_script.py  requirements.txt  run_commercial_migration.py  run_migration.py  start.bat  start.sh  task_queue.py  test_filename_sanitization.py  test_setup.py
backend/app/: config.py  database.py  websocket.py
backend/app/models/: __init__.py
backend/app/routers/: files.py  search.py  search_simple.py  websocket.py
backend/app/schemas/: __init__.py
backend/app/services/: cloudinary_service.py  metadata_extraction.py  pdf_processing.py  processing_queue.py  vector_processing.py  vector_processing_friend.py  vector_search.py  vector_search_friend.py  vector_search_old.py
backend/app/utils/: exceptions.py  logging.py
backend/migrations/: 001_add_contract_fields.sql  002_add_commercial_terms_and_risk_scoring.sql
backend/services/: async_upload_service.py  query_service.py  upload_service.py
frontend/: .env  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend-marketing/: README.md
frontend/src/: main.tsx  styles.css
frontend/src/hooks/: useDashboardData.ts
frontend/src/pages/: ContractDetail.tsx  Dashboard.tsx  Insights.tsx  Reports.tsx  Upload.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/shared/: AppLayout.tsx  Header.tsx
