[project]
name = "contract-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.20",
    "fastapi>=0.117.1",
    "llama-index==0.13.4",
    "llama-index-embeddings-google-genai==0.3.0",
    "llama-index-llms-google-genai==0.3.0",
    "llama-index-packs-fusion-retriever>=0.5.1",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-vector-stores-chroma==0.5.2",
    "llama-parse==0.6.54",
    "python-dotenv==1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.36.0",
]
